# data-portfolio-ruthvik

./: .gitignore  LICENSE  README.md
.github/workflows/: ci-p1-ipeds.yml  ci-p2-scorecard.yml  ci-p3-text.yml  ci-p4-sentiment.yml
01-ipeds-pipeline-dashboard/: Makefile  README.md  pyproject.toml
01-ipeds-pipeline-dashboard/data/: README.md
01-ipeds-pipeline-dashboard/data/schemas/: c_schema.yaml  effy_schema.yaml  gr_schema.yaml  hd_schema.yaml
01-ipeds-pipeline-dashboard/notebooks/: 01_data_exploration.ipynb  02_schema_analysis.ipynb  03_dashboard_prep.ipynb
01-ipeds-pipeline-dashboard/reports/: 01_institution_count_trends.html  02_enrollment_trends.html  03_geographic_map.html  04_completions_by_level.html  05_graduation_rate_distribution.html  06_schema_changes_summary.html  data_quality_report.html
01-ipeds-pipeline-dashboard/src/: __init__.py  clean.py  combine.py  config.py  export.py  harmonize.py  ingest.py  profile.py  report.py  validate.py  visualize.py
01-ipeds-pipeline-dashboard/tasks/: lessons.md  todo.md
01-ipeds-pipeline-dashboard/tests/: __init__.py  test_clean.py  test_harmonize.py  test_ingest.py
02-college-scorecard-analytics/: Makefile  README.md  pyproject.toml
02-college-scorecard-analytics/data/: README.md
02-college-scorecard-analytics/data/features/: feature_columns.yaml  scorecard_features.parquet
02-college-scorecard-analytics/models/: feature_columns.joblib
02-college-scorecard-analytics/notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_modeling.ipynb  04_shap_analysis.ipynb
02-college-scorecard-analytics/reports/: 01_earnings_by_sector.html  02_cost_vs_earnings.html  03_admissions_vs_earnings.html  04_earnings_map.html  model_results.json  shap_top_features.yaml
02-college-scorecard-analytics/src/: __init__.py  config.py  explain.py  export.py  features.py  ingest.py  model.py  visualize.py
02-college-scorecard-analytics/tasks/: lessons.md  todo.md
02-college-scorecard-analytics/tests/: __init__.py  test_features.py
03-higher-ed-text-analytics/: Makefile  README.md  pyproject.toml
03-higher-ed-text-analytics/data/extracted/: eric_abstracts.csv  eric_abstracts.parquet
03-higher-ed-text-analytics/models/bertopic_model/: ctfidf.safetensors  ctfidf_config.json  topic_embeddings.safetensors  topics.json
03-higher-ed-text-analytics/notebooks/: 01_data_collection.ipynb  02_preprocessing.ipynb  03_topic_modeling.ipynb  04_sentiment_analysis.ipynb
03-higher-ed-text-analytics/reports/: 01_topic_distribution.html  02_sentiment_by_year.html  03_topic_year_heatmap.html  04_sentiment_by_topic.html
03-higher-ed-text-analytics/src/: __init__.py  collect.py  config.py  export.py  keywords.py  preprocess.py  sentiment.py  topics.py  visualize.py
03-higher-ed-text-analytics/tasks/: lessons.md  todo.md
03-higher-ed-text-analytics/tests/: __init__.py  test_preprocess.py
04-course-sentiment-dashboard/: Makefile  README.md  pyproject.toml
04-course-sentiment-dashboard/data/: README.md
04-course-sentiment-dashboard/data/aggregated/: dept_aspect_sentiment.parquet  dept_sentiment.parquet  rating_sentiment_alignment.parquet  temporal_trends.parquet
04-course-sentiment-dashboard/notebooks/: 01_eda.ipynb  02_aspect_extraction.ipynb  03_sentiment_analysis.ipynb  04_dashboard_prep.ipynb
04-course-sentiment-dashboard/reports/: 01_dept_sentiment.html  02_aspect_heatmap.html  03_temporal_trends.html  04_rating_alignment.html
04-course-sentiment-dashboard/src/: __init__.py  aggregate.py  aspects.py  config.py  export.py  ingest.py  sentiment.py  visualize.py
04-course-sentiment-dashboard/tasks/: lessons.md  todo.md
04-course-sentiment-dashboard/tests/: __init__.py  test_aspects.py
portfolio-site/: App.jsx  index.html  package.json
portfolio-site/src/: App.jsx  index.css
